added FCTL synoptic page connected to variables

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.css
@@ -637,9 +637,96 @@ b787-10-sys-element #Pages #FCTL_Page #fuselage path {
     stroke-width: 3px;
     stroke-linecap: butt;
     stroke-linejoin: miter;
-    fill:none;
+    fill: none;
 }
 
 b787-10-sys-element #Pages #FCTL_Page #fuselage-mask path {
     fill: var(--eicasDarkGrey)
+}
+
+b787-10-sys-element #Pages #FCTL_Page #positions #pointers path {
+    fill: var(--eicasWhite);
+}
+
+b787-10-sys-element #Pages #FCTL_Page #positions #ranges path {
+    fill: none;
+    stroke: var(--eicasWhite);
+    stroke-width: 3;
+}
+
+b787-10-sys-element #Pages #FCTL_Page #spoilers rect {
+    fill: var(--eicasBlack);
+    stroke: var(--eicasWhite);
+    stroke-width: 4;
+}
+
+b787-10-sys-element #Pages #FCTL_Page #spoilers rect.spoiler-value {
+    fill: var(--eicasWhite);
+}
+
+b787-10-sys-element #Pages #FCTL_Page #elevators path {
+    fill: var(--eicasWhite);
+}
+
+
+b787-10-sys-element #Pages #FCTL_Page #Stab text.value, b787-10-sys-element #Pages #FCTL_Page #Stab text.left, b787-10-sys-element #Pages #FCTL_Page #Stab text.right, b787-10-sys-element #Pages #FCTL_Page #Stab text.info, b787-10-sys-element #Pages #FCTL_Page #Rudder text.value, b787-10-sys-element #Pages #FCTL_Page #Rudder text.left, b787-10-sys-element #Pages #FCTL_Page #Rudder text.right, b787-10-sys-element #Pages #FCTL_Page #Rudder text.info {
+    font-size: 35px;
+    letter-spacing: -3px;
+    text-anchor: middle;
+}
+
+b787-10-sys-element #Pages #FCTL_Page #Stab text.value, b787-10-sys-element #Pages #FCTL_Page #Rudder text.value {
+    text-anchor: end;
+}
+
+b787-10-sys-element #Pages #FCTL_Page #Stab text.takeoff, b787-10-sys-element #Pages #FCTL_Page #Rudder text.takeoff {
+    font-size: 30px;
+    letter-spacing: -3px;
+    text-anchor: middle;
+    fill: var(--eicasMagenta);
+}
+
+b787-10-sys-element #Pages #FCTL_Page #Stab rect, b787-10-sys-element #Pages #FCTL_Page #Stab .bar, b787-10-sys-element #Pages #FCTL_Page #Stab .markers, b787-10-sys-element #Pages #FCTL_Page #Rudder rect, b787-10-sys-element #Pages #FCTL_Page #Rudder .bar, b787-10-sys-element #Pages #FCTL_Page #Rudder .markers {
+    fill: none;
+    stroke: var(--eicasWhite);
+    stroke-width: 4px;
+}
+
+b787-10-sys-element #Pages #FCTL_Page #Stab .arrow, b787-10-sys-element #Pages #FCTL_Page #Rudder .arrow {
+    fill: var(--eicasWhite);
+}
+
+b787-10-sys-element #Pages #FCTL_Page #Stab rect.trimBand, b787-10-sys-element #Pages #FCTL_Page #Rudder rect.trimBand {
+    fill: var(--eicasGreen);
+    stroke: none;
+}
+
+b787-10-sys-element #Pages #FCTL_Page text.vlabel {
+    fill: var(--eicasBlue);
+    font-size: 32px;
+    letter-spacing: -12px;
+    glyph-orientation-vertical: 0;
+    writing-mode: vertical-lr;
+}
+
+b787-10-sys-element #Pages #FCTL_Page text.label {
+    fill: var(--eicasBlue);
+    font-size: 32px;
+    letter-spacing: -2px;
+    text-anchor: middle; }
+
+b787-10-sys-element #Pages #FCTL_Page #boxes rect {
+    stroke: var(--eicasGreen);
+    stroke-width: 3;
+}
+b787-10-sys-element text {
+    fill: var(--eicasWhite);
+    font-size: 45px;
+    text-anchor: start; }
+
+b787-10-sys-element #Pages #FCTL_Page text.box-label {
+    fill: var(--eicasGreen);
+    font-size: 32px;
+    letter-spacing: -2px;
+    text-anchor: middle;
 }
