--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
@@ -316,12 +316,22 @@
 }
 
 .settable {
+    display: inline-block;
     border-style: inset;
-    border-width: thin;
-    border-color: white;
-    background-color: #303030;
+    border-width: 3px;
+    border-color: #aaaaaa;
+    background-color: #606060;
     padding-left: 6px;
     padding-right: 6px;
+    height: 24px;
+    margin-top: 6px;
+}
+
+.settable > span {
+    display: block;
+    position: relative;
+    padding: 3px 0;
+    line-height: 15px;
 }
 
 #Borders {
