--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.css
@@ -312,6 +312,10 @@ b787-10-nd-element #NDInfo #TopBox text.Units {
     fill: cyan;
 }
 
+b787-10-nd-element #NDInfo #VORDMENavaids {
+    font-family: Roboto-Light;
+}
+
 b787-10-nd-element #NDInfo #VORDMENavaids div {
     top: 89%;
     width: 25%;
@@ -325,17 +329,21 @@ b787-10-nd-element #NDInfo #VORDMENavaids svg {
 }
 
 b787-10-nd-element #NDInfo #VORDMENavaids #VORDMENavaid_Left {
-    left: 8%;
+    left: 2.5%;
+    text-anchor: start;
+}
+
+b787-10-nd-element #NDInfo #VORDMENavaids #VORDMENavaid_Left #Distance {
+    text-anchor: end;
 }
 
 b787-10-nd-element #NDInfo #VORDMENavaids #VORDMENavaid_Right {
-    right: 8%;
+    right: 2.5%;
+    text-anchor: end;
 }
 
-b787-10-nd-element #NDInfo #VORDMENavaids text {
-    font-family: Roboto-Light;
-    text-align: center;
-    text-anchor: middle;
+b787-10-nd-element #NDInfo #VORDMENavaids #VORDMENavaid_Right #Unit {
+    text-anchor: start;
 }
 
 b787-10-nd-element #NDInfo #VORDMENavaids #State {
@@ -364,10 +372,16 @@ b787-10-nd-element #NDInfo #VORDMENavaids #Unit {
     fill: cyan;
 }
 
-b787-10-nd-element #NDInfo #VORDMENavaids #Arrow {
+b787-10-nd-element #NDInfo #VORDMENavaids #ArrowVor {
     fill: none;
-    stroke: white;
-    stroke-width: 6px;
+    stroke: green;
+    stroke-width: 4px;
+}
+
+b787-10-nd-element #NDInfo #VORDMENavaids #ArrowAdf {
+    fill: none;
+    stroke: cyan;
+    stroke-width: 4px;
 }
 
 b787-10-nd-element #NDInfo #Symbols {
@@ -452,6 +466,18 @@ b787-10-nd-element[halfsize=true] #NDInfo #TopBox text.Large {
 b787-10-nd-element[halfsize=true] #NDInfo #TopBox text.Small,
 b787-10-nd-element[halfsize=true] #NDInfo #TopBox text.Units {
     font-size: 15px;
+}
+
+b787-10-nd-element[halfsize=true] #NDInfo #VORDMENavaids svg {
+    width: 200%;
+}
+
+b787-10-nd-element[halfsize=true] #NDInfo #VORDMENavaids #VORDMENavaid_Left {
+    left: -2%;
+}
+
+b787-10-nd-element[halfsize=true] #NDInfo #VORDMENavaids #VORDMENavaid_Right {
+    right: 25%;
 }
 
 b787-10-nd-element[border=left] #Borders {
