--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.css
@@ -132,7 +132,6 @@ b787-10-pfd-element #LeftDisplay .content .element {
 }
 
 b787-10-pfd-element #LeftDisplay .content #PlaneInfo {
-    transform: rotateX(0);
     min-height: 200px;
     max-height: 200px;
     display: flex;
@@ -160,7 +159,7 @@ b787-10-pfd-element #LeftDisplay .content #PlaneInfo #PlaneInfo_Values {
 
 b787-10-pfd-element #LeftDisplay .content #PlaneInfo #Watch {
     position: absolute;
-    top: 25%;
+    top: 5%;
     left: 67%;
     width: 25%;
 }
@@ -174,7 +173,6 @@ b787-10-pfd-element #LeftDisplay .content #PlaneInfo #Watch #Digital {
 }
 
 b787-10-pfd-element #LeftDisplay #DayInfo {
-    transform: rotateX(0);
     min-height: 50px;
     max-height: 50px;
 }
@@ -338,10 +336,12 @@ b787-10-pfd-element #RightDisplay > .bottom #Map #MapRange {
 }
 
 b787-10-pfd-element #RightDisplay > .bottom #Map #MapSVG, b787-10-pfd-element #RightDisplay > .bottom #Map #road-network-canvas {
+    transform: rotateX(0);
     position: absolute;
 }
 
 b787-10-pfd-element #RightDisplay > .bottom #Map bing-map {
+    transform: rotateX(0);
     position: absolute;
     left: 0px;
     top: 0px;
@@ -356,6 +356,12 @@ b787-10-pfd-element #RightDisplay > .bottom #Compass {
     width: 100%;
     height: 100%;
     z-index: 1;
+}
+
+b787-10-pfd-element #RightDisplay > .bottom #Compass svg {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 b787-10-pfd-element #RightDisplay > .bottom #CompassInfos {
