--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.css
@@ -22,7 +22,7 @@ html {
 
 html body {
     -webkit-user-select: none;
-    font-family: Roboto-Regular;
+    font-family: BoeingEICAS;
     font-size: calc(var(--viewportHeightRatio) * (36px / 21.6) * var(--currentPageHeight) / 100);
     color: white;
     height: 100%;
@@ -48,22 +48,8 @@ html body {
 }
 
 @font-face {
-    font-family: "Roboto";
-    src: url("/Fonts/RobotoMono-Medium.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto-Light";
-    src: url("/Fonts/RobotoMono-Light.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto-Bold";
-    src: url("/Fonts/RobotoMono-Bold.ttf") format("truetype");
+    font-family: "BoeingEICAS";
+    src: url("/Fonts/BoeingEICAS.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
@@ -81,7 +67,7 @@ b787-10-pfd-element {
     height: 100%;
     display: block;
     background-color: black;
-    font-family: Roboto-Bold;
+    font-family: BoeingEICAS;
     overflow: hidden;
     z-index: 0;
 }
@@ -114,7 +100,7 @@ b787-10-pfd-element #LeftDisplay {
     transform: rotateX(0);
     flex: 0 0 33%;
     background: black;
-    border-right: 6px solid #4E4E50;
+    border-right: 4px solid #504b6d;
 }
 
 b787-10-pfd-element #LeftDisplay .content {
@@ -126,9 +112,9 @@ b787-10-pfd-element #LeftDisplay .content {
 }
 
 b787-10-pfd-element #LeftDisplay .content .element {
-    background-color: #313133;
-    border-left: 2px solid #4E4E50;
-    border-bottom: 3px solid #4E4E50;
+    background-color: #504b6d;
+    border-left: 2px solid #504b6d;
+    border-bottom: 1px solid white;
 }
 
 b787-10-pfd-element #LeftDisplay .content #PlaneInfo {
@@ -141,19 +127,19 @@ b787-10-pfd-element #LeftDisplay .content #PlaneInfo #PlaneInfo_Fields {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 20%;
-    color: deepskyblue;
-    font-family: Roboto-Light;
-    font-size: 18px;
+    width: 15%;
+    color: #69c4ef;
+    font-family: BoeingEICAS;
+    font-size: 16px;
 }
 
 b787-10-pfd-element #LeftDisplay .content #PlaneInfo #PlaneInfo_Values {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 60%;
+    width: 65%;
     color: white;
-    font-family: Roboto-Light;
+    font-family: BoeingEICAS;
     font-size: 20px;
 }
 
@@ -168,8 +154,8 @@ b787-10-pfd-element #LeftDisplay .content #PlaneInfo #Watch #Digital {
     position: relative;
     left: 21%;
     top: 80%;
-    font-family: Roboto-Light;
-    font-size: 20px;
+    font-family: BoeingEICAS;
+    font-size: 22px;
 }
 
 b787-10-pfd-element #LeftDisplay #DayInfo {
@@ -181,8 +167,8 @@ b787-10-pfd-element #LeftDisplay #DayInfo #DayInfo_Fields {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    color: deepskyblue;
-    font-family: Roboto-Light;
+    color: #69c4ef;
+    font-family: BoeingEICAS;
     font-size: 16px;
     width: 95%;
     margin-left: 3%;
@@ -193,15 +179,15 @@ b787-10-pfd-element #LeftDisplay #DayInfo #DayInfo_Values {
     flex-direction: row;
     justify-content: space-around;
     color: white;
-    font-family: Roboto-Light;
-    font-size: 19px;
+    font-family: BoeingEICAS;
+    font-size: 20px;
     width: 95%;
     margin-left: -3%;
 }
 
 b787-10-pfd-element #RightDisplay {
     transform: rotateX(0);
-    flex: 0 0 66%;
+    flex: 0 0 68%;
     display: flex;
     flex-direction: column;
 }
@@ -209,7 +195,7 @@ b787-10-pfd-element #RightDisplay {
 b787-10-pfd-element #RightDisplay > .top {
     transform: rotateX(0);
     position: relative;
-    flex: 0 0 65%;
+    flex: 0 0 68%;
     background: black;
     overflow: hidden;
 }
