--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
@@ -1,27 +1,6 @@
 ﻿@font-face {
-    font-family: "Roboto";
-    src: url("/Fonts/RobotoMono-Medium.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto-Light";
-    src: url("/Fonts/RobotoMono-Light.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto-Bold";
-    src: url("/Fonts/RobotoMono-Bold.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Consolas";
-    src: url("/Fonts/consola.ttf") format("truetype");
+    font-family: "BoeingEICAS";
+    src: url("/Fonts/BoeingEICAS.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
@@ -47,9 +26,9 @@
     vertical-align: top;
     width: 97.5%;
     height: 100%;
-    margin: 10px;
-    margin-top: 15px;
-    font-family: Consolas;
+    margin: 20px;
+    margin-top: 31px;
+    font-family: BoeingEICAS;
     font-size: 25px;
 }
 
@@ -89,7 +68,7 @@
     display: inline-block;
     width: 3%;
     margin-right: -5px;
-    margin-left: -5px;
+    margin-left: -3px;
 }
 
 .fms-mark {
@@ -101,7 +80,7 @@
 }
 
 .fms-side-container.left {
-    padding-left: 12px;
+    padding-left: 2px;
 }
 
 .fms-side-container.right {
@@ -115,7 +94,7 @@
 
 .fms-screen-container {
     display: inline-block;
-    width: 76%;
+    width: 74%;
     margin-top: 0px;
     margin-left: -5px;
     margin-right: -3px;
@@ -135,7 +114,7 @@
     width: 48%;
     margin: 0;
     margin-left: 24%;
-    font-size: 22px;
+    font-size: 20px;
     letter-spacing: 0px;
     transform: scaleY(1.2);
 }
@@ -146,7 +125,7 @@
     white-space: nowrap;
     width: 24%;
     padding-right: 18px;
-    font-size: 22px;
+    font-size: 20px;
     letter-spacing: 0px;
     transform: scaleY(1.2);
 }
@@ -174,7 +153,7 @@
     display: inline-block;
     white-space: nowrap;
     width: 22.5%;
-    font-size: 21px;
+    font-size: 20px;
     margin: 0;
 }
 
@@ -262,10 +241,10 @@
 
 .fms-exec-light {
     position: absolute;
-    top: 463px;
-    right: 38px;
-    width: 35px;
-    height: 7px;
+    top: 465px;
+    right: 28px;
+    width: 50px;
+    height: 10px;
     background-color: black;
     z-index: 2;
 }
