--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.css
@@ -22,7 +22,7 @@ html {
 
 html body {
     -webkit-user-select: none;
-    font-family: Roboto-Regular;
+    font-family: BoeingEICAS;
     font-size: calc(var(--viewportHeightRatio) * (36px / 21.6) * var(--currentPageHeight) / 100);
     color: white;
     height: 100%;
@@ -50,14 +50,13 @@ html body {
 :root {
     --eicasWhite: white;
     --eicasBlack: black;
-    --eicasDarkGrey: #323232;
-    --eicasLightGrey: #969696;
-    --eicasBlue: #009696;
-    --eicasGreen: green;
+    --eicasDarkGrey: #504b6d;
+    --eicasLightGrey: #797282;
+    --eicasBlue: #69c4ef;
+    --eicasGreen: #64ec28;
     --eicasOrange: #db7200;
-    --eicasRed: red;
-    --eicasMagenta: magenta;
-    --eicasAmber: #ffbf00;
+    --eicasRed: #e8361f;
+    --eicasMagenta: #fa0afa;
 }
 
 b787-10-sys-element {
@@ -76,7 +75,7 @@ b787-10-sys-element svg {
 
 b787-10-sys-element #PageButtons text {
     fill: var(--eicasWhite);
-    font-family: Roboto-Light;
+    font-family: BoeingEICAS;
     font-size: 36px;
     text-anchor: middle;
 }
@@ -88,7 +87,7 @@ b787-10-sys-element #PageButtons .border {
 }
 
 b787-10-sys-element #PageButtons .inner {
-    fill: #646464;
+    fill: #797282;
     stroke: none;
 }
 
@@ -97,7 +96,7 @@ b787-10-sys-element #PageButtons .topLeftBorder, b787-10-sys-element #PageButton
 }
 
 b787-10-sys-element #PageButtons .page-button-active .inner {
-    fill: #003200;
+    fill: #1b9110;
 }
 
 b787-10-sys-element #PageButtons .page-button-active .topLeftBorder {
@@ -105,15 +104,15 @@ b787-10-sys-element #PageButtons .page-button-active .topLeftBorder {
 }
 
 b787-10-sys-element #PageButtons .page-button-active .bottomRightBorder {
-    fill: #646464;
+    fill: #797282;
 }
 
 b787-10-sys-element #PageButtons .page-button-inactive .inner {
-    fill: #414141;
+    fill: #797282;
 }
 
 b787-10-sys-element #PageButtons .page-button-inactive .topLeftBorder {
-    fill: #646464;
+    fill: #797282;
 }
 
 b787-10-sys-element #PageButtons .page-button-inactive .bottomRightBorder {
@@ -122,13 +121,13 @@ b787-10-sys-element #PageButtons .page-button-inactive .bottomRightBorder {
 
 b787-10-sys-element #PageButtons .page-button-highlight .topLeftBorder,
 b787-10-sys-element #PageButtons .page-button-highlight .bottomRightBorder {
-    fill: magenta;
+    fill: #fa0bfa;
 }
 
 b787-10-sys-element #Pages #FUEL_Page text.label {
     font-size: 30px;
     text-anchor: middle;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #FUEL_Page text.quantity {
@@ -139,7 +138,7 @@ b787-10-sys-element #Pages #FUEL_Page text.quantity {
 
 b787-10-sys-element #Pages #FUEL_Page #TotalFuelDisplay rect {
     fill: none;
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     stroke-width: 4px;
 }
 
@@ -162,8 +161,8 @@ b787-10-sys-element #Pages #FUEL_Page #FuelTempDisplay .label {
 }
 
 b787-10-sys-element #Pages #FUEL_Page .engineInfo rect, b787-10-sys-element #Pages #FUEL_Page .engineInfo path {
-    fill: var(--eicasDarkGrey);
-    stroke: var(--eicasBlue);
+    fill: #504b6d;
+    stroke: #69c4ef;
     stroke-width: 4px;
 }
 
@@ -179,7 +178,7 @@ b787-10-sys-element #Pages #FUEL_Page .engineInfo circle {
 }
 
 b787-10-sys-element #Pages #FUEL_Page .engineInfo .fuelengine-active {
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
 }
 
 b787-10-sys-element #Pages #FUEL_Page .engineInfo .fuelengine-inactive {
@@ -187,8 +186,8 @@ b787-10-sys-element #Pages #FUEL_Page .engineInfo .fuelengine-inactive {
 }
 
 b787-10-sys-element #Pages #FUEL_Page .tankInfo rect.background {
-    fill: var(--eicasDarkGrey);
-    stroke: var(--eicasBlue);
+    fill: #504b6d;
+    stroke: #69c4ef;
     stroke-width: 4px;
 }
 
@@ -209,15 +208,15 @@ b787-10-sys-element #Pages #FUEL_Page #FuelPumps {
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelPumps .fuelpump-switched-active {
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelPumps .fuelpump-notswitched-active {
-    stroke: var(--eicasOrange);
+    stroke: #db7200;
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelPumps .fuelpump-switched-inactive {
-    stroke: var(--eicasOrange);
+    stroke: #db7200;
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelPumps .fuelpump-notswitched-inactive {
@@ -230,11 +229,11 @@ b787-10-sys-element #Pages #FUEL_Page #FuelValves {
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelValves .fuelvalve-open {
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelValves .fuelvalve-closing {
-    stroke: var(--eicasOrange);
+    stroke: #db7200;
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelValves .fuelvalve-closed {
@@ -262,7 +261,7 @@ b787-10-sys-element #Pages #FUEL_Page #FuelLines rect {
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelLines .fuelline-active {
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelLines .fuelline-active text {
@@ -270,11 +269,11 @@ b787-10-sys-element #Pages #FUEL_Page #FuelLines .fuelline-active text {
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelLines .fuelline-active rect {
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
 }
 
 b787-10-sys-element #Pages #FUEL_Page #FuelLines .fuelline-active path {
-    fill: var(--eicasGreen);
+    fill: #64ec28;
     stroke: none;
 }
 
@@ -311,7 +310,7 @@ b787-10-sys-element[border=right] #Borders {
 
 
 b787-10-sys-element #Pages #GEAR_Page path#gears-main-path {
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     stroke-width: 6px;
     fill: none;
 }
@@ -319,17 +318,17 @@ b787-10-sys-element #Pages #GEAR_Page path#gears-main-path {
 b787-10-sys-element #Pages #GEAR_Page #door-labels text.door-label {
     font-size: 46px;
     text-anchor: middle;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #GEAR_Page #gears-numbers text.gear-number-label {
     font-size: 46px;
     text-anchor: middle;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #GEAR_Page #tire-pressures text.tire-pressure-label {
-    font-family: Roboto-Light;
+    font-family: BoeingEICAS;
     letter-spacing: -4px;
     font-size: 40px;
     text-anchor: middle;
@@ -337,7 +336,7 @@ b787-10-sys-element #Pages #GEAR_Page #tire-pressures text.tire-pressure-label {
 }
 
 b787-10-sys-element #Pages #GEAR_Page #brake-temperatures text.brake-temperature-label {
-    font-family: Roboto-Light;
+    font-family: BoeingEICAS;
     letter-spacing: -2px;
     font-size: 40px;
     fill: var(--eicasWhite);
@@ -369,7 +368,7 @@ b787-10-sys-element #Pages #GEAR_Page #gear-doors.transit #crosshatches path.cro
 
 
 b787-10-sys-element #Pages #GEAR_Page #gear-doors #door-status-labels text.door-status-label {
-    font-family: Roboto-Light;
+    font-family: BoeingEICAS;
     letter-spacing: -4px;
     font-size: 50px;
     fill: var(--eicasWhite);
@@ -386,26 +385,26 @@ b787-10-sys-element #Pages #GEAR_Page #gear-doors.inactive #door-status-labels t
 b787-10-sys-element #Pages #GEAR_Page #door-labels text.door-label {
     font-size: 46px;
     text-anchor: middle;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #STAT_Page #boxes path.box {
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #STAT_Page #box-labels text.box-label {
     font-size: 40px;
     text-anchor: middle;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #STAT_Page #boxes-content text.box-content-label {
     font-size: 28px;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #STAT_Page #boxes-content text.box-content-value {
-    font-family: Roboto-Light;
+    font-family: BoeingEICAS;
     font-size: 36px;
     text-anchor: middle;
     fill: var(--eicasWhite);
@@ -417,29 +416,29 @@ b787-10-sys-element #Pages #STAT_Page #boxes-content tspan.unit {
 }
 
 b787-10-sys-element #Pages #HYD_Page #boxes-top rect.box {
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     stroke-width: 2px;
 }
 
 b787-10-sys-element #Pages #HYD_Page #texts text {
-    font-weight: bold;
+    font-family: BoeingEICAS;
     font-size: 28px;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
     text-align: center;
     text-anchor: middle;
 }
 
 b787-10-sys-element #Pages #HYD_Page #boxes-top-texts text > tspan {
-    font-weight: bold;
+    font-family: BoeingEICAS;
     font-size: 28px;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
     text-align: center;
     text-anchor: middle;
 }
 
 b787-10-sys-element #Pages #HYD_Page #boxes-qty path.box-qty {
-    fill: var(--eicasLightGrey);
-    stroke: var(--eicasBlue);
+    fill: #797282;
+    stroke: #69c4ef;
     stroke-width: 4;
 }
 
@@ -452,7 +451,7 @@ b787-10-sys-element #Pages #HYD_Page #boxes-qty path.qty-clip {
 }
 
 b787-10-sys-element #Pages #HYD_Page path.greens {
-    fill: var(--eicasGreen);
+    fill: #64ec28;
 }
 
 b787-10-sys-element #Pages #HYD_Page path.whites {
@@ -470,7 +469,7 @@ b787-10-sys-element #Pages #HYD_Page path.greens[state=on] {
 
 b787-10-sys-element #Pages #DOOR_Page path {
     stroke-width: 3px;
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     fill: none;
 }
 
@@ -478,14 +477,14 @@ b787-10-sys-element #Pages #DOOR_Page text {
     font-size: 36px;
     text-align: end;
     letter-spacing: -1.5px;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #DOOR_Page text.text-left {
     font-size: 36px;
     text-align: end;
     letter-spacing: -1.5px;
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
 }
 
 b787-10-sys-element #Pages #DOOR_Page text.text-right {
@@ -511,17 +510,17 @@ b787-10-sys-element #Pages #DOOR_Page .door-open {
 }
 
 b787-10-sys-element #Pages #DOOR_Page path.fuseladge-gray-mask {
-    fill: var(--eicasDarkGrey);
+    fill: #504b6d;
     stroke-width: 0;
     stroke: none;
 }
 
 b787-10-sys-element #Pages #DOOR_Page text.entry_a_text {
-    fill: var(--eicasGreen);
+    fill: #64ec28;
 }
 
 b787-10-sys-element #Pages #DOOR_Page text#lavatory-text.vacant {
-    fill: var(--eicasGreen);
+    fill: #64ec28;
 }
 
 b787-10-sys-element #Pages #DOOR_Page text#lavatory-text.occupied {
@@ -536,68 +535,68 @@ b787-10-sys-element #Pages #AIR_Page #white-lines path {
 
 b787-10-sys-element #Pages #AIR_Page #green-lines path {
     stroke-width: 9;
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
     fill: none;
 }
 
 b787-10-sys-element #Pages #AIR_Page #green-lines circle {
     stroke-width: 3;
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
     fill: var(--eicasBlack);
 }
 
 b787-10-sys-element #Pages #AIR_Page #green-lines #r-pack,
 b787-10-sys-element #Pages #AIR_Page #green-lines #l-pack {
     stroke-width: 3;
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
     fill: var(--eicasBlack)
 }
 
 b787-10-sys-element #Pages #AIR_Page #fuselage path {
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     stroke-width: 3px;
     stroke-linecap: butt;
     stroke-linejoin: miter;
-    fill: var(--eicasDarkGrey)
+    fill: #504b6d
 }
 
 b787-10-sys-element #Pages #AIR_Page #boxes #boxes-top rect {
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     stroke-width: 3px;
     fill: var(--eicasBlack);
 }
 
 b787-10-sys-element #Pages #AIR_Page #boxes #boxes-top path {
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     stroke-width: 3px;
     fill: var(--eicasBlack);
 }
 
 b787-10-sys-element #Pages #AIR_Page #boxes #boxes-bottom rect {
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     stroke-width: 3px;
     fill: var(--eicasBlack);
 }
 
 b787-10-sys-element #Pages #AIR_Page #boxes #boxes-bottom rect#air-distribution {
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
     stroke-width: 3px;
     fill: var(--eicasBlack);
 }
 
 b787-10-sys-element #Pages #AIR_Page #static-texts text {
-    fill: var(--eicasGreen);
+    fill: #64ec28;
 }
 
 b787-10-sys-element #Pages #AIR_Page #static-texts #titles-blue text {
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
     text-align: center;
     text-anchor: middle;
     font-size: 24px;
 }
 
 b787-10-sys-element #Pages #AIR_Page #static-texts #titles-green text {
-    fill: var(--eicasGreen);
+    fill: #64ec28;
     text-align: center;
     text-anchor: middle;
     font-size: 24px;
@@ -615,7 +614,7 @@ b787-10-sys-element #Pages #AIR_Page #static-texts #temporary-hidden > text {
 }
 
 b787-10-sys-element #Pages #AIR_Page #static-texts #temperatures-selected text {
-    fill: var(--eicasMagenta);
+    fill: #fa0afa;
 
     font-size: 24px;
 }
@@ -633,7 +632,7 @@ b787-10-sys-element #Pages #AIR_Page #static-texts #top-texts text {
 }
 
 b787-10-sys-element #Pages #FCTL_Page #fuselage path {
-    stroke: var(--eicasBlue);
+    stroke: #69c4ef;
     stroke-width: 3px;
     stroke-linecap: butt;
     stroke-linejoin: miter;
@@ -641,7 +640,7 @@ b787-10-sys-element #Pages #FCTL_Page #fuselage path {
 }
 
 b787-10-sys-element #Pages #FCTL_Page #fuselage-mask path {
-    fill: var(--eicasDarkGrey)
+    fill: #504b6d
 }
 
 b787-10-sys-element #Pages #FCTL_Page #positions #pointers path {
@@ -683,7 +682,7 @@ b787-10-sys-element #Pages #FCTL_Page #Stab text.takeoff, b787-10-sys-element #P
     font-size: 30px;
     letter-spacing: -3px;
     text-anchor: middle;
-    fill: var(--eicasMagenta);
+    fill: #fa0afa;
 }
 
 b787-10-sys-element #Pages #FCTL_Page #Stab rect, b787-10-sys-element #Pages #FCTL_Page #Stab .bar, b787-10-sys-element #Pages #FCTL_Page #Stab .markers, b787-10-sys-element #Pages #FCTL_Page #Rudder rect, b787-10-sys-element #Pages #FCTL_Page #Rudder .bar, b787-10-sys-element #Pages #FCTL_Page #Rudder .markers {
@@ -697,12 +696,12 @@ b787-10-sys-element #Pages #FCTL_Page #Stab .arrow, b787-10-sys-element #Pages #
 }
 
 b787-10-sys-element #Pages #FCTL_Page #Stab rect.trimBand, b787-10-sys-element #Pages #FCTL_Page #Rudder rect.trimBand {
-    fill: var(--eicasGreen);
+    fill: #64ec28;
     stroke: none;
 }
 
 b787-10-sys-element #Pages #FCTL_Page text.vlabel {
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
     font-size: 32px;
     letter-spacing: -12px;
     glyph-orientation-vertical: 0;
@@ -710,13 +709,13 @@ b787-10-sys-element #Pages #FCTL_Page text.vlabel {
 }
 
 b787-10-sys-element #Pages #FCTL_Page text.label {
-    fill: var(--eicasBlue);
+    fill: #69c4ef;
     font-size: 32px;
     letter-spacing: -2px;
     text-anchor: middle; }
 
 b787-10-sys-element #Pages #FCTL_Page #boxes rect {
-    stroke: var(--eicasGreen);
+    stroke: #64ec28;
     stroke-width: 3;
 }
 b787-10-sys-element text {
@@ -725,7 +724,7 @@ b787-10-sys-element text {
     text-anchor: start; }
 
 b787-10-sys-element #Pages #FCTL_Page text.box-label {
-    fill: var(--eicasGreen);
+    fill: #64ec28;
     font-size: 32px;
     letter-spacing: -2px;
     text-anchor: middle;
